# YoutubeSummarizer

./: GUI.py  README.md  YoutubeSummariser.ipynb  pyproject.toml  summarize.py
