[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = ""
authors = ["JoudiAlakkad <joudi.alakkad@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
jupyter = "^1.1.1"
youtube-transcript-api = "^0.6.3"
nltk = "^3.9.1"
scikit-learn = "^1.6.0"
pyqt5 = "^5.15.11"
pillow = "^11.0.0"
transformers = "^4.47.1"
torch = "^2.5.1"
torchvision = "^0.20.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
